[gd_scene load_steps=4 format=3 uid="uid://d0obkjd8dx1h4"]

[ext_resource type="Script" path="res://Main.gd" id="1_e532k"]
[ext_resource type="Texture2D" uid="uid://ddv4timmg5map" path="res://Images/HomeIcon.png" id="3_qvarv"]
[ext_resource type="Script" path="res://PuzzlePieceSpawner.gd" id="3_tpnuq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_e532k")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PuzzlePieceSpawner" type="Node2D" parent="."]
script = ExtResource("3_tpnuq")

[node name="TopLeft" type="Node2D" parent="PuzzlePieceSpawner"]
position = Vector2(-393, -276)

[node name="BottomRight" type="Node2D" parent="PuzzlePieceSpawner"]
position = Vector2(520, 270)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
text = "Congratulations !!!
You Win"
horizontal_alignment = 1

[node name="HomeConfirm" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CanvasLayer/HomeConfirm"]
custom_minimum_size = Vector2(750, 250)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HomeConfirm/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HomeConfirm/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/HomeConfirm/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Are you Sure You want to go home?
 You will lose all progress on this puzzle."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HomeConfirm/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="NoButton" type="Button" parent="CanvasLayer/HomeConfirm/Panel/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "No, Stay Here"

[node name="YesButton" type="Button" parent="CanvasLayer/HomeConfirm/Panel/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Yes, Go Home"

[node name="HomeIcon" type="Sprite2D" parent="."]
position = Vector2(-507, -257)
texture = ExtResource("3_qvarv")

[node name="HomeButton" type="Button" parent="HomeIcon"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
metadata/_edit_lock_ = true

[node name="CheckBox" type="CheckBox" parent="."]
offset_right = 24.0
offset_bottom = 24.0
focus_mode = 0

[connection signal="pressed" from="CanvasLayer/HomeConfirm/Panel/CenterContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HomeConfirm/Panel/CenterContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="HomeIcon/HomeButton" to="." method="_on_home_button_pressed"]
